force-app/main/default/objects/Project_Order__c/Project_Order__c.object-meta.xml
<CustomObject>
    <label>Project Order</label>
    <nameField>
        <displayFormat>P - {00000}</displayFormat>
        <label>Project No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>