force-app/main/default/objects/Project_Order__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>Approver__c</referenceTo>
    <relationshipLabel>Project Orders</relationshipLabel>
    <relationshipName>Project_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>