force-app/main/default/objects/Project_Order__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Project_Team__c</referenceTo>
    <relationshipLabel>Project Order</relationshipLabel>
    <relationshipName>Project_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>