force-app/main/default/objects/Project_Order__c/fields/Estimated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Budget__c</fullName>
    <label>Estimated Budget</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>