force-app/main/default/objects/Project_Order__c/fields/Estimated_Completion_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Days__c</fullName>
    <label>Estimated Completion Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>