force-app/main/default/objects/Project_Order__c/fields/Link_Issue__c.field-meta.xml
<CustomField>
    <fullName>Link_Issue__c</fullName>
    <label>Link Issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>