force-app/main/default/objects/Project_Order__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Project_Order__c</referenceTo>
    <relationshipLabel>Project Orders</relationshipLabel>
    <relationshipName>Project_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>