force-app/main/default/objects/Project_Order__c/fields/Project_Subject__c.field-meta.xml
<CustomField>
    <fullName>Project_Subject__c</fullName>
    <description>This is used to write project defination in summary.</description>
    <label>Project Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>