force-app/main/default/objects/Project_Order__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <formula>Stakeholder__r.Name</formula>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>