force-app/main/default/objects/Project_Order__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stakeholder</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>