force-app/main/default/objects/Project_Order__c/fields/Stakeholder_Email__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Email__c</fullName>
    <label>Stakeholder Email</label>
    <type>Email</type>
</CustomField>