force-app/main/default/objects/Project_Order__c/fields/System_Used__c.field-meta.xml
<CustomField>
    <fullName>System_Used__c</fullName>
    <label>System Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>ms office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>