force-app/main/default/objects/Project_Order__c/validationRules/ProjectEndDateValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectEndDateValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>Project_End_Date__c   &lt;=   Project_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Project_End_Date__c</errorDisplayField>
    <errorMessage>Project end date must be after project start date.</errorMessage>
</ValidationRule>